# streamlit-workout-app

./: .cursorrules  LICENSE  README.md  app.py  pyproject.toml
api/: __init__.py  agent_orchestrator.py  anthropic_api.py  api.py  openai_api.py
api/agent/: __init__.py
api/agent/_anthropic/: workout_routine.py
api/agent/_openai/: workout_routine.py
config/: settings.py
data/: exercises.csv  users.csv  workout.db  workout_routines.json
database/: __init__.py  dbutils.py  setup_db.py  tables.py  workout_routine_db.py
examples/: add_user_profile.py  create_user_profile.py  create_workout_routine.py  create_workout_routine_ii.py  get_user_profile.py  transform_goal.py  transform_user_profile.py  transform_workout_routine.py  transform_workout_routine_ii.py  transform_workout_routine_iii.py  upsert_user_profile.py  upsert_workout_routine.py  workout_routine.json
instructions/: prompts.md  roadmap.md
modals/: __init__.py  workout_routine.py
models/: __init__.py  schemas.py  workout_routine.py
screens/: home.py  workout_generator.py  workout_routines.py
utils/: __init__.py  db_utils.py  log_formatter.py  utils.py
